name:                 capability-workshop
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               Alexander Vershilov
maintainer:           alexander.vershilov@gmail.com
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable capability-workshop
  main-is:              Main.hs
  other-modules:
    Step0
    Step1
    Step2
    Step3
    Step4
  default-extensions:
    DataKinds
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    GeneralizedNewtypeDeriving
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5,
                        capability,
                        containers,
                        transformers,
                        filepath,
                        directory,
                        streaming,
                        type-operators,
                        generic-lens,
                        lens,
                        -- redundant
                        mtl
  hs-source-dirs:       src
  default-language:     Haskell2010
